--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                             <nav class="main-navigation">
                                 <ul>
                                     <li class="navItems"><a href="index.html">HOME</a></li>
-                                    <li class="navItems"><a href="/About/index.html">ABOUT</a></li>
-                                    <li class="navItems"><a href="/Service_Page/index.html">SERVICE</a></li>
-                                    <li class="navItems"><a href="/Blog_Page/index.html">BLOG</a></li>
-                                    <li class="navItems"><a href="/Contact_Page/index.html">CONTACT US</a></li>
+                                    <li class="navItems"><a href="../About/index.html">ABOUT</a></li>
+                                    <li class="navItems"><a href="../Service_Page/index.html">SERVICE</a></li>
+                                    <li class="navItems"><a href="../Blog_Page/index.html">BLOG</a></li>
+                                    <li class="navItems"><a href="../Contact_Page/index.html">CONTACT US</a></li>
                                 </ul>
                             </nav>
                         </div><!--// main-menu-area End -->
