--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                                 <ul>
                                     <li class="navItems"><a href="index.html">HOME</a></li>
                                     <li class="navItems"><a href="https://amar-chaudhary.github.io/L-PSolutions/About/index.html">ABOUT</a></li>
-                                    <li class="navItems"><a href="Service_Page/index.html">SERVICE</a></li>
-                                    <li class="navItems"><a href="Blog_Page/index.html">BLOG</a></li>
-                                    <li class="navItems"><a href="Contact_Page/index.html">CONTACT US</a></li>
+                                    <li class="navItems"><a href="https://amar-chaudhary.github.io/L-PSolutions/Service_Page/index.html">SERVICE</a></li>
+                                    <li class="navItems"><a href="https://amar-chaudhary.github.io/L-PSolutions/Blog_Page/index.html">BLOG</a></li>
+                                    <li class="navItems"><a href="https://amar-chaudhary.github.io/L-PSolutions/Contact_Page/index.html">CONTACT US</a></li>
                                 </ul>
                             </nav>
                         </div><!--// main-menu-area End -->
@@ -385,10 +385,10 @@ Lead Qualification: Our expertise of lead qualification, provides your team with
                                         </div>
                                         <ul class="footer-list">
                                             <li ><a href="index.html">HOME</a></li>
-                                            <li ><a href="/About/index.html">ABOUT</a></li>
-                                            <li ><a href="/Service_Page/index.html">SERVICE</a></li>
-                                            <li ><a href="/Blog_Page/index.html">Blog</a></li>
-                                            <li ><a href="/Contact_Page/index.html">CONTACT US</a></li>
+                                            <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/About/index.html">ABOUT</a></li>
+                                            <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Service_Page/index.html">SERVICE</a></li>
+                                            <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Blog_Page/index.html">Blog</a></li>
+                                            <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Contact_Page/index.html">CONTACT US</a></li>
                                             
                                         </ul>
                                     </div><!--// Footer-info End -->
