--- a/Contact_Page/index.html
+++ b/Contact_Page/index.html
@@ -50,11 +50,11 @@
                         <div class="main-menu">
                             <nav class="main-navigation">
                                 <ul>
-                                    <li><a href="../index.html">HOME</a></li>
-                                    <li><a href="../About/index.html">ABOUT</a></li>
-                                    <li><a href="../Service_Page/index.html">SERVICE</a></li>
-                                    <li><a href="../Blog_Page/index.html">BLOG</a></li>
-                                    <li><a href="../Contact_Page/index.html">CONTACT US</a></li>
+                                    <li><a href="https://amar-chaudhary.github.io/L-PSolutions/index.html">HOME</a></li>
+                                    <li><a href="https://amar-chaudhary.github.io/L-PSolutions/About/index.html">ABOUT</a></li>
+                                    <li><a href="https://amar-chaudhary.github.io/L-PSolutions/Service_Page/index.html">SERVICE</a></li>
+                                    <li><a href="https://amar-chaudhary.github.io/L-PSolutions/Blog_Page/index.html">BLOG</a></li>
+                                    <li><a href="https://amar-chaudhary.github.io/L-PSolutions/Contact_Page/index.html">CONTACT US</a></li>
                                 </ul>
                             </nav>
                         </div><!--// main-menu-area End -->
@@ -213,11 +213,11 @@
                                 <h3>Quick LInks</h3>
                             </div>
                             <ul class="footer-list">
-                                <li ><a href="../index.html">HOME</a></li>
-                                <li ><a href="../About/index.html">ABOUT</a></li>
-                                <li ><a href="../Service_Page/index.html">SERVICE</a></li>
-                                <li ><a href="../Blog_Page/index.html">Blog</a></li>
-                                <li ><a href="../Contact_Page/index.html">CONTACT US</a></li>
+                                <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/index.html">HOME</a></li>
+                                <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/About/index.html">ABOUT</a></li>
+                                <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Service_Page/index.html">SERVICE</a></li>
+                                <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Blog_Page/index.html">Blog</a></li>
+                                <li ><a href="https://amar-chaudhary.github.io/L-PSolutions/Contact_Page/index.html">CONTACT US</a></li>
                             </ul>
                         </div><!--// Footer-info End -->
                     </div>
