--- a/Contact_Page/index.html
+++ b/Contact_Page/index.html
@@ -274,7 +274,7 @@
 <script src="js/js-main.js"></script>
 
 <!-- google map js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAq7MrCR1A2qIShmjbtLHSKjcEIEBEEwM"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 <script>
     // When the window has finished loading create our google map below
     google.maps.event.addDomListener(window, 'load', init);
